# genny

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
genny/: __init__.py  cli.py  codeparser.py  docgen.py  filesystem.py  settingsmanager.py  templater.py  versioncontrol.py
genny/templates/: fallback.jinja  html1.jinja  html2.jinja  standard.jinja
genny/tests/: test_cli.py  test_codeparser.py  test_codestructure.py  test_docgen.py  test_filesystem.py  test_settingsmanager.py  test_templater.py  test_versioncontrol.py
